# Serenity.Core

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: gcc_build.yml
CMake/Macros/: AutoCollect.cmake  CheckBuildDir.cmake  CheckPlatform.cmake  EnsureVision.cmake  GroupSources.cmake  TargetConfiguration.cmake
Dependencies/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/Application/: CMakeLists.txt
Sources/Libraries/: CMakeLists.txt
